--- a/roster.html
+++ b/roster.html
@@ -20,12 +20,12 @@
 <tr><td>PHI</td><td>DeVonta Smith          </td></tr>
 <tr><td>CLE</td><td>Elijah Moore           </td></tr>
 <tr><td>HOU</td><td>Nico Collins           </td></tr>
-<tr><td>BAL</td><td>Odell Beckham          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Darren Waller          </td></tr>
 <tr><td>PIT</td><td>Pat Freiermuth         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Justin Tucker          </td></tr>
+<tr><td>PHI</td><td>Jake Elliott           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Bijan Robinson         </td></tr>
 <tr><td> GB</td><td>Anders Carlson         </td></tr>
@@ -114,8 +114,8 @@
 <tr><td>NYG</td><td>Graham Gano            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Blake Grupe            </td></tr>
-<tr><td>LAC</td><td>Quentin Johnston       </td></tr>
 <tr><td>HOU</td><td>Tank Dell              </td></tr>
+<tr><td>ARI</td><td>Michael Wilson         </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -193,10 +193,10 @@
 <tr><td> NO</td><td>Chris Olave            </td></tr>
 <tr><td>LAC</td><td>Keenan Allen           </td></tr>
 <tr><td>ATL</td><td>Drake London           </td></tr>
-<tr><td> KC</td><td>Skyy Moore             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Kyle Pitts             </td></tr>
 <tr><td>CLE</td><td>David Njoku            </td></tr>
+<tr><td>DAL</td><td>Jake Ferguson          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Evan McPherson         </td></tr>
 <tr><td height=9></td><td></td></tr>
