--- a/pickups.html
+++ b/pickups.html
@@ -6,8 +6,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jake Elliott/Odell Beckham</td>
+<td width=50>10/3</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -99,8 +99,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Michael Wilson/Quentin Johnston</td>
+<td width=50>10/3</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -210,8 +210,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jake Ferguson/Skyy Moore</td>
+<td width=50>10/3</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
