--- a/pickups.html
+++ b/pickups.html
@@ -331,6 +331,12 @@ Sam - Jordan Love/Aaron Rodgers (9/12)<br>
 John - Hunter Henry/Taysom Hill (9/12)<br>
 Roger - Joshua Kelley/JK Dobbins (9/13)<br>
 States - Hayden Hurst/Greg Dulcich (9/20)<br>
-Roger - Aidan O'Connell/Mike Williams (9/30)
+Roger - Aidan O'Connell/Mike Williams (9/30)<br>
+States - Joshua Dobbs/Jamaal Williams (10/4)
+</td></tr>
+<tr><td width=50>10/4</td>
+<td width=600>
+Roger - Jake Ferguson, Kareem Hunt<br>
+Randy - Justin Tucker, Pat Freiermuth
 </td></tr>
 </table>
