--- a/roster.html
+++ b/roster.html
@@ -15,6 +15,7 @@
 <tr><td>PIT</td><td>Jaylen Warren          </td></tr>
 <tr><td>PHI</td><td>Kenneth Gainwell       </td></tr>
 <tr><td>LAC</td><td>Joshua Kelley          </td></tr>
+<tr><td>CLE</td><td>Kareem Hunt            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Stefon Diggs           </td></tr>
 <tr><td>PHI</td><td>DeVonta Smith          </td></tr>
@@ -22,9 +23,8 @@
 <tr><td>HOU</td><td>Nico Collins           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Darren Waller          </td></tr>
-<tr><td>PIT</td><td>Pat Freiermuth         </td></tr>
+<tr><td>DAL</td><td>Jake Ferguson          </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>BAL</td><td>Justin Tucker          </td></tr>
 <tr><td>PHI</td><td>Jake Elliott           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Bijan Robinson         </td></tr>
@@ -123,11 +123,11 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>States (5)</b></font></td></tr>
 <tr><td>LAC</td><td>Justin Herbert         </td></tr>
 <tr><td> NO</td><td>Derek Carr             </td></tr>
+<tr><td>ARI</td><td>Joshua Dobbs           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Alexander Mattison     </td></tr>
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
 <tr><td> TB</td><td>Rachaad White          </td></tr>
-<tr><td> NO</td><td>Jamaal Williams        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Ja'Marr Chase          </td></tr>
 <tr><td>DAL</td><td>CeeDee Lamb            </td></tr>
@@ -187,7 +187,6 @@
 <tr><td> NE</td><td>Rhamondre Stevenson    </td></tr>
 <tr><td> GB</td><td>Aaron Jones            </td></tr>
 <tr><td> NE</td><td>Ezekiel Elliott        </td></tr>
-<tr><td>CLE</td><td>Kareem Hunt            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Tyreek Hill            </td></tr>
 <tr><td> NO</td><td>Chris Olave            </td></tr>
@@ -196,9 +195,10 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Kyle Pitts             </td></tr>
 <tr><td>CLE</td><td>David Njoku            </td></tr>
-<tr><td>DAL</td><td>Jake Ferguson          </td></tr>
+<tr><td>PIT</td><td>Pat Freiermuth         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Evan McPherson         </td></tr>
+<tr><td>BAL</td><td>Justin Tucker          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>IND</td><td>Anthony Richardson     </td></tr>
 <tr><td>BAL</td><td>Zay Flowers            </td></tr>
