--- a/week5.html
+++ b/week5.html
@@ -11,9 +11,9 @@
 <tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Freiermuth</td>    <td></td><td align=right>0</td></tr>
-<tr><td>ACarlson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Collins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Ferguson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>O'Connell</td>     <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
