--- a/week5.html
+++ b/week5.html
@@ -67,7 +67,7 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (4)</b></font></td></tr>
 <tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
 <tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>JJefferson</td>    <td></td><td align=right>0</td></tr>
 <tr><td>St Brown</td>      <td></td><td align=right>0</td></tr>
@@ -125,13 +125,13 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (7)</b></font></td></tr>
-<tr><td>GSmith</td>        <td></td><td align=right>0</td></tr>
-<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Stafford</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
-<tr><td>KAllen</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Olave</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Richardson</td>    <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
