--- a/pickups.html
+++ b/pickups.html
@@ -274,8 +274,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jaleel McLaughlin/Juwan Johnson</td>
+<td width=50>10/5</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -286,8 +286,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Kyler Murray/Michael Thomas</td>
+<td width=50>10/5</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
