--- a/roster.html
+++ b/roster.html
@@ -237,6 +237,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Grant (9)</b></font></td></tr>
 <tr><td>MIN</td><td>Kirk Cousins           </td></tr>
 <tr><td>CLE</td><td>Deshaun Watson         </td></tr>
+<tr><td>ARI</td><td>Kyler Murray           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Tony Pollard           </td></tr>
 <tr><td>NYJ</td><td>Breece Hall            </td></tr>
@@ -248,16 +249,15 @@
 <tr><td>JAX</td><td>Christian Kirk         </td></tr>
 <tr><td> SF</td><td>Brandon Aiyuk          </td></tr>
 <tr><td> TB</td><td>Mike Evans             </td></tr>
-<tr><td> NO</td><td>Michael Thomas         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>JAX</td><td>Evan Engram            </td></tr>
-<tr><td> NO</td><td>Juwan Johnson          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Daniel Carlson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Jahmyr Gibbs           </td></tr>
 <tr><td>CHI</td><td>Roschon Johnson        </td></tr>
 <tr><td>CLE</td><td>Dorian ThompsonRobinson</td></tr>
+<tr><td>DEN</td><td>Jaleel McLaughlin      </td></tr>
 </table>
 </td>
 </tr>
