--- a/week5.html
+++ b/week5.html
@@ -24,7 +24,7 @@
 <tr><td>RWilson</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Achane</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
+<tr><td>GDavis</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Maher</td>         <td></td><td align=right>0</td></tr>
@@ -95,11 +95,11 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (5)</b></font></td></tr>
-<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Mattison</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Dobbs</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Mattison</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Musgrave</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Moody</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Young</td>         <td></td><td align=right>0</td></tr>
@@ -111,12 +111,12 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (9)</b></font></td></tr>
 <tr><td>Cousins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
-<tr><td>RJohnson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>BHall</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Aiyuk</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DCarlson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>McLaughlin</td>    <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
