--- a/thousand.html
+++ b/thousand.html
@@ -297,6 +297,12 @@
     <td>1180</td>
     <td>Mike</td>
     <td>575</td></tr>
+<tr><td>2023</td>
+    <td>Week 5</td>
+    <td>Matthew Edwards</td>
+    <td>1180</td>
+    <td>Roger</td>
+    <td>555</td></tr>
 <tr><td>2022</td>
     <td>Week 2</td>
     <td>Randy Edwards</td>
