--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 <a href="week2.html"><b>2</b></a>
 <a href="week3.html"><b>3</b></a>
 <a href="week4.html"><b>4</b></a>
-<a href="week5.html"><b>5P</b></a><br>
+<a href="week5.html"><b>5</b></a>
+<a href="week6.html"><b>6P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -63,44 +64,44 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Randy(7)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>2600</font></td>
-    <td><font size=2>1915</font></td>
+    <td><font size=2>3100</font></td>
+    <td><font size=2>2235</font></td>
     <td><font size=2>860</font></td>
     <td><font size=2>410</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Sam(3)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2950</font></td>
-    <td><font size=2>2950</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3250</font></td>
+    <td><font size=2>3635</font></td>
     <td><font size=2>1000</font></td>
-    <td><font size=2>400</font></td>
+    <td><font size=2>300</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Grant(9)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2020</font></td>
-    <td><font size=2>2015</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>2660</font></td>
+    <td><font size=2>2765</font></td>
     <td><font size=2>680</font></td>
     <td><font size=2>225</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>States(5)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>2460</font></td>
+    <td><font size=2>3215</font></td>
+    <td><font size=2>750</font></td>
+    <td><font size=2>230</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>2540</font></td>
-    <td><font size=2>2815</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>3095</font></td>
+    <td><font size=2>3995</font></td>
     <td><font size=2>1045</font></td>
     <td><font size=2>430</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>States(5)</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>1710</font></td>
-    <td><font size=2>2575</font></td>
-    <td><font size=2>655</font></td>
-    <td><font size=2>230</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -112,41 +113,41 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>John(4)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>2765</font></td>
-    <td><font size=2>1665</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>3280</font></td>
+    <td><font size=2>2360</font></td>
     <td><font size=2>965</font></td>
     <td><font size=2>385</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Steven(6)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>2410</font></td>
-    <td><font size=2>1730</font></td>
+    <td><font size=2>3105</font></td>
+    <td><font size=2>2245</font></td>
     <td><font size=2>915</font></td>
     <td><font size=2>345</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>Matthew(10)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3860</font></td>
+    <td><font size=2>3200</font></td>
+    <td><font size=2>1180</font></td>
+    <td><font size=2>210</font></td>
+    <td><font size=2>2</font></td>
 <tr><td><font size=2>Mike(8)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2250</font></td>
-    <td><font size=2>2845</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>2570</font></td>
+    <td><font size=2>3345</font></td>
     <td><font size=2>695</font></td>
-    <td><font size=2>430</font></td>
+    <td><font size=2>320</font></td>
     <td><font size=2>0</font></td>
-<tr><td><font size=2>Matthew(10)</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>2680</font></td>
-    <td><font size=2>2645</font></td>
-    <td><font size=2>1170</font></td>
-    <td><font size=2>210</font></td>
-    <td><font size=2>1</font></td>
 <tr><td><font size=2>Rich(2)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>1880</font></td>
-    <td><font size=2>2650</font></td>
+    <td><font size=2>2565</font></td>
+    <td><font size=2>2950</font></td>
     <td><font size=2>705</font></td>
     <td><font size=2>265</font></td>
     <td><font size=2>0</font></td>
