--- a/pickups.html
+++ b/pickups.html
@@ -18,8 +18,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Emari Demercado</td>
+<td width=50>10/11</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -82,8 +82,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Brandon Aubrey/Clayton Tune</td>
+<td width=50>10/10</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -332,7 +332,8 @@ John - Hunter Henry/Taysom Hill (9/12)<br>
 Roger - Joshua Kelley/JK Dobbins (9/13)<br>
 States - Hayden Hurst/Greg Dulcich (9/20)<br>
 Roger - Aidan O'Connell/Mike Williams (9/30)<br>
-States - Joshua Dobbs/Jamaal Williams (10/4)
+States - Joshua Dobbs/Jamaal Williams (10/4)<br>
+Steven - Jeff Wilson/Nick Chubb (10/11)
 </td></tr>
 <tr><td width=50>10/4</td>
 <td width=600>
