--- a/roster.html
+++ b/roster.html
@@ -14,7 +14,6 @@
 <tr><td>PHI</td><td>Rashaad Penny          </td></tr>
 <tr><td>PIT</td><td>Jaylen Warren          </td></tr>
 <tr><td>PHI</td><td>Kenneth Gainwell       </td></tr>
-<tr><td>LAC</td><td>Joshua Kelley          </td></tr>
 <tr><td>CLE</td><td>Kareem Hunt            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Stefon Diggs           </td></tr>
@@ -30,6 +29,7 @@
 <tr><td>ATL</td><td>Bijan Robinson         </td></tr>
 <tr><td> GB</td><td>Anders Carlson         </td></tr>
 <tr><td> LV</td><td>Aidan O'Connell        </td></tr>
+<tr><td>ARI</td><td>Emari Demercado        </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -81,9 +81,9 @@
 <tr><td>MIN</td><td>TJ Hockenson           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Younghoe Koo           </td></tr>
+<tr><td>DAL</td><td>Brandon Aubrey         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NE</td><td>Chad Ryland            </td></tr>
-<tr><td>ARI</td><td>Clayton Tune           </td></tr>
 <tr><td>TEN</td><td>Will Levis             </td></tr>
 <tr><td> KC</td><td>Rashee Rice            </td></tr>
 </table>
@@ -152,10 +152,10 @@
 <tr><td>CHI</td><td>Justin Fields          </td></tr>
 <tr><td>MIA</td><td>Tua Tagovailoa         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>CLE</td><td>Nick Chubb             </td></tr>
 <tr><td>TEN</td><td>Derrick Henry          </td></tr>
 <tr><td>BUF</td><td>Damien Harris          </td></tr>
 <tr><td>IND</td><td>Zack Moss              </td></tr>
+<tr><td>MIA</td><td>Jeff Wilson            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>AJ Brown               </td></tr>
 <tr><td>CIN</td><td>Tee Higgins            </td></tr>
