--- a/pickups.html
+++ b/pickups.html
@@ -18,7 +18,7 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Emari Demercado</td>
+<td width=370>Emari Demercado/Joshua Kelley</td>
 <td width=50>10/11</td>
 </tr></table></td>
 <td><table><tr>
