--- a/pickups.html
+++ b/pickups.html
@@ -215,8 +215,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Josh Palmer/Rashod Bateman</td>
+<td width=50>10/15</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -333,7 +333,8 @@ Roger - Joshua Kelley/JK Dobbins (9/13)<br>
 States - Hayden Hurst/Greg Dulcich (9/20)<br>
 Roger - Aidan O'Connell/Mike Williams (9/30)<br>
 States - Joshua Dobbs/Jamaal Williams (10/4)<br>
-Steven - Jeff Wilson/Nick Chubb (10/11)
+Steven - Jeff Wilson/Nick Chubb (10/11)<br>
+Mike - Devin Singletary/Evan Hull (10/15)
 </td></tr>
 <tr><td width=50>10/4</td>
 <td width=600>
