--- a/roster.html
+++ b/roster.html
@@ -214,13 +214,14 @@
 <tr><td>DEN</td><td>Javonte Williams       </td></tr>
 <tr><td>WAS</td><td>Brian Robinson         </td></tr>
 <tr><td>BUF</td><td>Latavius Murray        </td></tr>
+<tr><td>HOU</td><td>Devin Singletary       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYJ</td><td>Garrett Wilson         </td></tr>
 <tr><td> GB</td><td>Christian Watson       </td></tr>
 <tr><td>DEN</td><td>Jerry Jeudy            </td></tr>
 <tr><td> TB</td><td>Chris Godwin           </td></tr>
-<tr><td>BAL</td><td>Rashod Bateman         </td></tr>
 <tr><td>DET</td><td>Jameson Williams       </td></tr>
+<tr><td>LAC</td><td>Josh Palmer            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td>HOU</td><td>Dalton Schultz         </td></tr>
@@ -229,7 +230,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Jordan Addison         </td></tr>
 <tr><td>DET</td><td>Sam LaPorta            </td></tr>
-<tr><td>IND</td><td>Evan Hull              </td></tr>
 </table>
 </td>
 <td valign=top>
