--- a/freeagt.html
+++ b/freeagt.html
@@ -1,59 +1,60 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2023 Free Agent Leaderboard<br>(Through week 5)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2023 Free Agent Leaderboard<br>(Through week 6)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Kenny Pickett          </td><td><font size=3> 495</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Desmond Ridder         </td><td><font size=3> 490</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Mac Jones              </td><td><font size=3> 405</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 390</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 385</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Desmond Ridder         </td><td><font size=3> 615</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Kenny Pickett          </td><td><font size=3> 495</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 435</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Mac Jones              </td><td><font size=3> 430</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 415</td></tr>
 <tr><td><font size=3>6)</td><td><font size=3>Ryan Tannehill         </td><td><font size=3> 285</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Zach Wilson            </td><td><font size=3> 245</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Zach Wilson            </td><td><font size=3> 250</td></tr>
 <tr><td><font size=3>8)</td><td><font size=3>Andy Dalton            </td><td><font size=3> 190</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Gardner Minshew        </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Gardner Minshew        </td><td><font size=3> 185</td></tr>
 <tr><td><font size=3>10)</td><td><font size=3>Mike White             </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>11)</td><td><font size=3>Taysom Hill            </td><td><font size=3>  35</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
+<tr><td><font size=3>Jordan Mason           </td><td><font size=3> 230</td></tr>
 <tr><td><font size=3>Andrew Beck            </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Jordan Mason           </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>Chuba Hubbard          </td><td><font size=3> 170</td></tr>
+<tr><td><font size=3>Joshua Kelley          </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>Salvon Ahmed           </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Matt Breida            </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Tony Jones             </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Antonio Gibson         </td><td><font size=3>  80</td></tr>
 <tr><td><font size=3>Rico Dowdle            </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Clyde Edwards-Helaire  </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Craig Reynolds         </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Nick Bawden            </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Kyle Juszczyk          </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Devin Singletary       </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Pierre Strong          </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Christopher Brooks     </td><td><font size=3>  30</td></tr>
-<tr><td><font size=3>Antonio Gibson         </td><td><font size=3>  30</td></tr>
-<tr><td><font size=3>Chuba Hubbard          </td><td><font size=3>  30</td></tr>
-<tr><td><font size=3>Michael Burton         </td><td><font size=3>  10</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>Rashid Shaheed         </td><td><font size=3> 345</td></tr>
-<tr><td><font size=3>Josh Reynolds          </td><td><font size=3> 335</td></tr>
-<tr><td><font size=3>Jakobi Meyers          </td><td><font size=3> 315</td></tr>
+<tr><td><font size=3>Rashid Shaheed         </td><td><font size=3> 485</td></tr>
+<tr><td><font size=3>Jakobi Meyers          </td><td><font size=3> 420</td></tr>
+<tr><td><font size=3>Josh Reynolds          </td><td><font size=3> 360</td></tr>
 <tr><td><font size=3>Romeo Doubs            </td><td><font size=3> 280</td></tr>
 <tr><td><font size=3>Brandon Johnson        </td><td><font size=3> 280</td></tr>
+<tr><td><font size=3>Curtis Samuel          </td><td><font size=3> 280</td></tr>
 <tr><td><font size=3>Rondale Moore          </td><td><font size=3> 250</td></tr>
 <tr><td><font size=3>DJ Chark               </td><td><font size=3> 240</td></tr>
+<tr><td><font size=3>Kendrick Bourne        </td><td><font size=3> 220</td></tr>
 <tr><td><font size=3>Tutu Atwell            </td><td><font size=3> 215</td></tr>
-<tr><td><font size=3>Curtis Samuel          </td><td><font size=3> 205</td></tr>
 <tr><td><font size=3>KaVontae Turpin        </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Kendrick Bourne        </td><td><font size=3> 180</td></tr>
 <tr><td><font size=3>Zay Jones              </td><td><font size=3> 175</td></tr>
 <tr><td><font size=3>KJ Osborn              </td><td><font size=3> 175</td></tr>
 <tr><td><font size=3>Nick Westbrook-Ikhine  </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>Josh Palmer            </td><td><font size=3> 165</td></tr>
+<tr><td><font size=3>Calvin Austin          </td><td><font size=3> 160</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
@@ -62,36 +63,36 @@
 <tr><td><font size=3>2)</td><td><font size=3>Pharaoh Brown          </td><td><font size=3> 160</td></tr>
 <tr><td><font size=3>3)</td><td><font size=3>Donald Parham          </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>4)</td><td><font size=3>Logan Thomas           </td><td><font size=3> 135</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Zach Ertz              </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Noah Gray              </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Tyler Conklin          </td><td><font size=3>  80</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Jimmy Graham           </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Foster Moreau          </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Jonnu Smith            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Tyler Higbee           </td><td><font size=3>  65</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Noah Fant              </td><td><font size=3>  55</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Blake Bell             </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Harrison Bryant        </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Jonnu Smith            </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Zach Ertz              </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Noah Gray              </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Tyler Conklin          </td><td><font size=3>  80</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Kylen Granson          </td><td><font size=3>  80</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Jimmy Graham           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Foster Moreau          </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Quintin Morris         </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Tyler Higbee           </td><td><font size=3>  65</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Noah Fant              </td><td><font size=3>  55</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Nick Folk              </td><td><font size=3> 530</td></tr>
-<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 490</td></tr>
-<tr><td><font size=3>Brandon Aubrey         </td><td><font size=3> 475</td></tr>
-<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 435</td></tr>
-<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 410</td></tr>
-<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 400</td></tr>
-<tr><td><font size=3>Matt Prater            </td><td><font size=3> 400</td></tr>
-<tr><td><font size=3>Joey Slye              </td><td><font size=3> 365</td></tr>
-<tr><td><font size=3>Greg Zuerlein          </td><td><font size=3> 345</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 325</td></tr>
-<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 285</td></tr>
-<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 275</td></tr>
-<tr><td><font size=3>Cameron Dicker         </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>Riley Patterson        </td><td><font size=3> 235</td></tr>
-<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>Nick Folk              </td><td><font size=3> 605</td></tr>
+<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 585</td></tr>
+<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 570</td></tr>
+<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 540</td></tr>
+<tr><td><font size=3>Matt Prater            </td><td><font size=3> 510</td></tr>
+<tr><td><font size=3>Greg Zuerlein          </td><td><font size=3> 495</td></tr>
+<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 450</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 410</td></tr>
+<tr><td><font size=3>Joey Slye              </td><td><font size=3> 410</td></tr>
+<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 335</td></tr>
+<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 315</td></tr>
+<tr><td><font size=3>Riley Patterson        </td><td><font size=3> 305</td></tr>
+<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 300</td></tr>
+<tr><td><font size=3>Cameron Dicker         </td><td><font size=3> 280</td></tr>
+<tr><td><font size=3>Austin Seibert         </td><td><font size=3>  35</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
@@ -100,16 +101,16 @@
 <tr><td><font size=3>Xavier Gipson          </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Charlie Jones          </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Trey Palmer            </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>Emari Demercado        </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Josh Downs             </td><td><font size=3> 120</td></tr>
 <tr><td><font size=3>Dontayvion Wicks       </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Ronnie Bell            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Josh Downs             </td><td><font size=3>  70</td></tr>
+<tr><td><font size=3>Brenton Strange        </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Tyson Bagent           </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Jake Bobo              </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Andrei Iosivas         </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Hunter Luepke          </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Luke Schoonmaker       </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Josh Whyle             </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Jalin Hyatt            </td><td><font size=3>  40</td></tr>
-<tr><td><font size=3>Derius Davis           </td><td><font size=3>  25</td></tr>
-<tr><td><font size=3>Michael Mayer          </td><td><font size=3>   5</td></tr>
 </table>
 </td></tr></table>
