--- a/pickups.html
+++ b/pickups.html
@@ -94,8 +94,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Tyson Bagent/Younghoe Koo</td>
+<td width=50>10/17</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
@@ -134,8 +134,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jordan Mason/Joshua Dobbs</td>
+<td width=50>10/17</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -146,8 +146,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Zach Evans/Derek Carr</td>
+<td width=50>10/17</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
