--- a/roster.html
+++ b/roster.html
@@ -80,12 +80,12 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>TJ Hockenson           </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>ATL</td><td>Younghoe Koo           </td></tr>
 <tr><td>DAL</td><td>Brandon Aubrey         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NE</td><td>Chad Ryland            </td></tr>
 <tr><td>TEN</td><td>Will Levis             </td></tr>
 <tr><td> KC</td><td>Rashee Rice            </td></tr>
+<tr><td>CHI</td><td>Tyson Bagent           </td></tr>
 </table>
 </td>
 </tr>
@@ -122,12 +122,11 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>States (5)</b></font></td></tr>
 <tr><td>LAC</td><td>Justin Herbert         </td></tr>
-<tr><td> NO</td><td>Derek Carr             </td></tr>
-<tr><td>ARI</td><td>Joshua Dobbs           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Alexander Mattison     </td></tr>
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
 <tr><td> TB</td><td>Rachaad White          </td></tr>
+<tr><td> SF</td><td>Jordan Mason           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Ja'Marr Chase          </td></tr>
 <tr><td>DAL</td><td>CeeDee Lamb            </td></tr>
@@ -144,6 +143,7 @@
 <tr><td>LAR</td><td>Stetson Bennett        </td></tr>
 <tr><td> GB</td><td>Luke Musgrave          </td></tr>
 <tr><td> TB</td><td>Sean Tucker            </td></tr>
+<tr><td>LAR</td><td>Zach Evans             </td></tr>
 </table>
 </td>
 <td valign=top>
