--- a/roster.html
+++ b/roster.html
@@ -20,6 +20,7 @@
 <tr><td>PHI</td><td>DeVonta Smith          </td></tr>
 <tr><td>CLE</td><td>Elijah Moore           </td></tr>
 <tr><td>HOU</td><td>Nico Collins           </td></tr>
+<tr><td> KC</td><td>Mecole Hardman         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Darren Waller          </td></tr>
 <tr><td>DAL</td><td>Jake Ferguson          </td></tr>
@@ -29,7 +30,6 @@
 <tr><td>ATL</td><td>Bijan Robinson         </td></tr>
 <tr><td> GB</td><td>Anders Carlson         </td></tr>
 <tr><td> LV</td><td>Aidan O'Connell        </td></tr>
-<tr><td>ARI</td><td>Emari Demercado        </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -200,8 +200,8 @@
 <tr><td>CIN</td><td>Evan McPherson         </td></tr>
 <tr><td>BAL</td><td>Justin Tucker          </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>IND</td><td>Anthony Richardson     </td></tr>
 <tr><td>BAL</td><td>Zay Flowers            </td></tr>
+<tr><td>IND</td><td>Josh Downs             </td></tr>
 </table>
 </td>
 <td valign=top>
