--- a/pickups.html
+++ b/pickups.html
@@ -30,8 +30,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Mecole Hardman/Emari Demercado</td>
+<td width=50>10/18</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
@@ -334,7 +334,8 @@ States - Hayden Hurst/Greg Dulcich (9/20)<br>
 Roger - Aidan O'Connell/Mike Williams (9/30)<br>
 States - Joshua Dobbs/Jamaal Williams (10/4)<br>
 Steven - Jeff Wilson/Nick Chubb (10/11)<br>
-Mike - Devin Singletary/Evan Hull (10/15)
+Mike - Devin Singletary/Evan Hull (10/15)<br>
+Randy - Josh Downs/Anthony Richardson (10/19)
 </td></tr>
 <tr><td width=50>10/4</td>
 <td width=600>
