--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 <a href="week4.html"><b>4</b></a>
 <a href="week5.html"><b>5</b></a>
 <a href="week6.html"><b>6</b></a>
-<a href="week7.html"><b>7P</b></a><br>
+<a href="week7.html"><b>7</b></a>
+<a href="week8.html"><b>8P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -66,43 +67,43 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Randy(7)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>3855</font></td>
-    <td><font size=2>2545</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>4285</font></td>
+    <td><font size=2>3390</font></td>
     <td><font size=2>860</font></td>
     <td><font size=2>410</font></td>
     <td><font size=2>1</font></td>
+<tr><td><font size=2>Sam(3)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4465</font></td>
+    <td><font size=2>4630</font></td>
+    <td><font size=2>1000</font></td>
+    <td><font size=2>300</font></td>
+    <td><font size=2>3</font></td>
 <tr><td><font size=2>Grant(9)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>3055</font></td>
-    <td><font size=2>2975</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>3380</font></td>
+    <td><font size=2>3665</font></td>
     <td><font size=2>680</font></td>
     <td><font size=2>225</font></td>
     <td><font size=2>0</font></td>
-<tr><td><font size=2>Sam(3)</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>3620</font></td>
-    <td><font size=2>4200</font></td>
-    <td><font size=2>1000</font></td>
-    <td><font size=2>300</font></td>
-    <td><font size=2>2</font></td>
-<tr><td><font size=2>States(5)</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>2770</font></td>
-    <td><font size=2>3970</font></td>
-    <td><font size=2>750</font></td>
-    <td><font size=2>230</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Roger(1)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>3305</font></td>
-    <td><font size=2>4390</font></td>
+    <td><font size=2>4010</font></td>
+    <td><font size=2>4720</font></td>
     <td><font size=2>1045</font></td>
     <td><font size=2>210</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>States(5)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>3100</font></td>
+    <td><font size=2>4675</font></td>
+    <td><font size=2>750</font></td>
+    <td><font size=2>230</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -112,46 +113,46 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>John(4)</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>3995</font></td>
-    <td><font size=2>2730</font></td>
-    <td><font size=2>965</font></td>
-    <td><font size=2>385</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Steven(6)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>3670</font></td>
-    <td><font size=2>2615</font></td>
+    <td><font size=2>4365</font></td>
+    <td><font size=2>3035</font></td>
     <td><font size=2>915</font></td>
     <td><font size=2>345</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>John(4)</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>4450</font></td>
+    <td><font size=2>3405</font></td>
+    <td><font size=2>965</font></td>
+    <td><font size=2>385</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2>Rich(2)</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>3390</font></td>
-    <td><font size=2>3400</font></td>
+    <td><font size=2>4065</font></td>
+    <td><font size=2>3855</font></td>
     <td><font size=2>825</font></td>
     <td><font size=2>265</font></td>
     <td><font size=2>1</font></td>
-<tr><td><font size=2>Matthew(10)</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4310</font></td>
-    <td><font size=2>4025</font></td>
-    <td><font size=2>1180</font></td>
-    <td><font size=2>210</font></td>
-    <td><font size=2>2</font></td>
 <tr><td><font size=2>Mike(8)</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>2940</font></td>
-    <td><font size=2>4060</font></td>
+    <td><font size=2>3630</font></td>
+    <td><font size=2>4385</font></td>
     <td><font size=2>695</font></td>
     <td><font size=2>320</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>Matthew(10)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>4730</font></td>
+    <td><font size=2>4720</font></td>
+    <td><font size=2>1180</font></td>
+    <td><font size=2>210</font></td>
+    <td><font size=2>2</font></td>
 </table>
 </table>
 </body>
