--- a/pickups.html
+++ b/pickups.html
@@ -111,8 +111,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Darrell Henderson/Michael Wilson</td>
+<td width=50>10/25</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -151,8 +151,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Emari Demercado/Chigoziem Okonkwo</td>
+<td width=50>10/24</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -298,8 +298,8 @@
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Dustin Hopkins/Dorian Thompson-Robinson</td>
+<td width=50>10/24</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
@@ -335,7 +335,9 @@ Roger - Aidan O'Connell/Mike Williams (9/30)<br>
 States - Joshua Dobbs/Jamaal Williams (10/4)<br>
 Steven - Jeff Wilson/Nick Chubb (10/11)<br>
 Mike - Devin Singletary/Evan Hull (10/15)<br>
-Randy - Josh Downs/Anthony Richardson (10/19)
+Randy - Josh Downs/Anthony Richardson (10/19)<br>
+Steven - Pierre Strong/Damien Harris (10/24)<br>
+Randy - D'Onta Foreman/Pat Freiermuth (10/25)
 </td></tr>
 <tr><td width=50>10/4</td>
 <td width=600>
