--- a/roster.html
+++ b/roster.html
@@ -103,6 +103,7 @@
 <tr><td> GB</td><td>AJ Dillon              </td></tr>
 <tr><td>ATL</td><td>Tyler Allgeier         </td></tr>
 <tr><td>LAR</td><td>Kyren Williams         </td></tr>
+<tr><td>LAR</td><td>Darrell Henderson      </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Justin Jefferson       </td></tr>
 <tr><td>DET</td><td>Amon-Ra St Brown       </td></tr>
@@ -115,7 +116,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Blake Grupe            </td></tr>
 <tr><td>HOU</td><td>Tank Dell              </td></tr>
-<tr><td>ARI</td><td>Michael Wilson         </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -153,16 +153,15 @@
 <tr><td>MIA</td><td>Tua Tagovailoa         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>Derrick Henry          </td></tr>
-<tr><td>BUF</td><td>Damien Harris          </td></tr>
 <tr><td>IND</td><td>Zack Moss              </td></tr>
 <tr><td>MIA</td><td>Jeff Wilson            </td></tr>
+<tr><td>CLE</td><td>Pierre Strong          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>AJ Brown               </td></tr>
 <tr><td>CIN</td><td>Tee Higgins            </td></tr>
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Mark Andrews           </td></tr>
-<tr><td>TEN</td><td>Chigoziem Okonkwo      </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>SEA</td><td>Jason Myers            </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -172,6 +171,7 @@
 <tr><td>TEN</td><td>Tyjae Spears           </td></tr>
 <tr><td>DEN</td><td>Marvin Mims            </td></tr>
 <tr><td>CAR</td><td>Jonathan Mingo         </td></tr>
+<tr><td>ARI</td><td>Emari Demercado        </td></tr>
 </table>
 </td>
 </tr>
@@ -187,6 +187,7 @@
 <tr><td> NE</td><td>Rhamondre Stevenson    </td></tr>
 <tr><td> GB</td><td>Aaron Jones            </td></tr>
 <tr><td> NE</td><td>Ezekiel Elliott        </td></tr>
+<tr><td>CHI</td><td>D'Onta Foreman         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Tyreek Hill            </td></tr>
 <tr><td> NO</td><td>Chris Olave            </td></tr>
@@ -195,7 +196,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Kyle Pitts             </td></tr>
 <tr><td>CLE</td><td>David Njoku            </td></tr>
-<tr><td>PIT</td><td>Pat Freiermuth         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Evan McPherson         </td></tr>
 <tr><td>BAL</td><td>Justin Tucker          </td></tr>
@@ -253,10 +253,10 @@
 <tr><td>JAX</td><td>Evan Engram            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Daniel Carlson         </td></tr>
+<tr><td>CLE</td><td>Dustin Hopkins         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Jahmyr Gibbs           </td></tr>
 <tr><td>CHI</td><td>Roschon Johnson        </td></tr>
-<tr><td>CLE</td><td>Dorian ThompsonRobinson</td></tr>
 <tr><td>DEN</td><td>Jaleel McLaughlin      </td></tr>
 </table>
 </td>
